# solid-client

./: .env.example  .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build.yml
src/: deeplink.js  main.js  updater.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: discord.rs  main.rs
