[package]
name = "solid-client"
version = "0.0.1"
description = "An unofficial desktop client for Vectaria.io game"
authors = ["robertpakalns"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }
dotenvy = "0.15.7"

[dependencies]
discord-rich-presence = "0.2.5"
dotenvy = "0.15.7"

serde_json = "1.0.140"
tauri = { version = "2.5.1", features = ["devtools"] }
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
webbrowser = "1.0.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
